Fixed navbar + footer + body alignment and responsiveness
- Navbar and Footer now always get elevated with z-index 99
- Body is elevated to z-index 90
- Footer for screen > 575px will now stick to the bottom
- Body now has 200px of after content to make the content seeable when
  scroll to the bottom
- Minor fixes to CSS for navbar, body and footer
- Removed ContactUs.css
- Added loremipsum to About Us for testing
- Adjustment to ContactUs.js to use common element instead of using
  separate CSS

--- a/client/ReactProject/src/App/App.less
+++ b/client/ReactProject/src/App/App.less
@@ -3,7 +3,3 @@
 .App {
   text-align: center;
 }
-
-.Website-Body {
-  padding-bottom: 200px;
-}
